[gd_scene load_steps=2 format=3 uid="uid://bq5lef3drqwx2"]

[ext_resource type="Script" uid="uid://b02d4pocenatm" path="res://scripts/pause_menu.gd" id="1_jvnd5"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvnd5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.41960785)

[node name="List" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="List"]
layout_mode = 2
text = "Continue"

[node name="Save" type="Button" parent="List"]
layout_mode = 2
text = "Save"

[node name="MainMenu" type="Button" parent="List"]
layout_mode = 2
text = "Main menu"

[connection signal="pressed" from="List/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="List/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="List/MainMenu" to="." method="_on_main_menu_pressed"]
